# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/idl_tool/idl.gni")
import("//build/ohos.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")

################################### libfms ########################################
config("formmgr_log_config") {
  defines = [ "FMS_LOG_TAG = \"FormManagerService\"" ]
}

config("fms_idl_config") {
  include_dirs = [
    "${target_gen_dir}",
    "interfaces/inner_api/include",
  ]
}

idl_gen_interface("form_host_delegate_interface") {
  sources = [ "ipc_idl_gen/IFormHostDelegate.idl" ]
  log_domainid = "0xD001301"
  log_tag = "FormManagerService"
  subsystem_name = "ability"
  part_name = "form_fwk"
}

ohos_source_set("form_host_delegate_proxy") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  output_values = get_target_outputs(":form_host_delegate_interface")
  sources = filter_include(output_values, [ "*_proxy.cpp" ])
  public_configs = [ ":fms_idl_config" ]
  deps = [ ":form_host_delegate_interface" ]
  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "ability"
  part_name = "form_fwk"
}

ohos_source_set("form_host_delegate_stub") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  output_values = get_target_outputs(":form_host_delegate_interface")
  sources = filter_include(output_values, [ "*_stub.cpp" ])
  public_configs = [ ":fms_idl_config" ]
  deps = [ ":form_host_delegate_interface" ]
  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "ability"
  part_name = "form_fwk"
}

idl_gen_interface("form_provider_delegate_interface") {
  sources = [ "ipc_idl_gen/IFormProviderDelegate.idl" ]
  log_domainid = "0xD001301"
  log_tag = "FormManagerService"
  subsystem_name = "ability"
  part_name = "form_fwk"
}

ohos_source_set("form_provider_delegate_proxy") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  output_values = get_target_outputs(":form_provider_delegate_interface")
  sources = filter_include(output_values, [ "*_proxy.cpp" ])
  public_configs = [ ":fms_idl_config" ]
  deps = [ ":form_provider_delegate_interface" ]
  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "ability"
  part_name = "form_fwk"
}

ohos_source_set("form_provider_delegate_stub") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  output_values = get_target_outputs(":form_provider_delegate_interface")
  sources = filter_include(output_values, [ "*_stub.cpp" ])
  public_configs = [ ":fms_idl_config" ]
  deps = [ ":form_provider_delegate_interface" ]
  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "ability"
  part_name = "form_fwk"
}

config("formmgr_config") {
  include_dirs = [
    "services/config",
    "services/include",
  ]
}

ohos_shared_library("libfms") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  shlib_type = "sa"
  version_script = "libfms.map"
  cflags_cc = []
  include_dirs =
      [ "${form_fwk_napi_path}/form_host/form_state_observer/include" ]

  sources = [
    "interfaces/inner_api/src/theme_manager_service_param.cpp",
    "services/config/form_resource_param.cpp",
    "services/config/form_xml_parser.cpp",
    "services/src/ams_mgr/form_ams_helper.cpp",
    "services/src/bms_mgr/form_bms_helper.cpp",
    "services/src/bms_mgr/form_bundle_event_callback.cpp",
    "services/src/common/connection/form_ability_connection.cpp",
    "services/src/common/connection/form_ability_connection_reporter.cpp",
    "services/src/common/event/form_event_handler.cpp",
    "services/src/common/event/form_event_notify_connection.cpp",
    "services/src/common/event/form_event_util.cpp",
    "services/src/common/event/system_event/form_sys_event_receiver.cpp",
    "services/src/common/event/system_event/form_systemload_listener.cpp",
    "services/src/common/timer_mgr/form_refresh_limiter.cpp",
    "services/src/common/timer_mgr/form_timer_mgr.cpp",
    "services/src/common/util/form_dump_mgr.cpp",
    "services/src/common/util/form_report.cpp",
    "services/src/common/util/form_serial_queue.cpp",
    "services/src/common/util/form_trust_mgr.cpp",
    "services/src/common/util/form_util.cpp",
    "services/src/common/util/form_timer_util.cpp",
    "services/src/common/util/mem_status_listener.cpp",
    "services/src/data_center/database/form_db_cache.cpp",
    "services/src/data_center/database/form_db_info.cpp",
    "services/src/data_center/database/form_rdb_data_mgr.cpp",
    "services/src/data_center/form_basic_info_mgr.cpp",
    "services/src/data_center/form_cache_mgr.cpp",
    "services/src/data_center/form_cust_config_mgr.cpp",
    "services/src/data_center/form_data_mgr.cpp",
    "services/src/data_center/form_data_proxy_mgr.cpp",
    "services/src/data_center/form_data_proxy_record.cpp",
    "services/src/data_center/form_info/bundle_form_info.cpp",
    "services/src/data_center/form_info/form_info_helper.cpp",
    "services/src/data_center/form_info/form_info_mgr.cpp",
    "services/src/data_center/form_info/form_info_rdb_storage_mgr.cpp",
    "services/src/data_center/form_info/form_info_storage.cpp",
    "services/src/data_center/form_info/form_item_info.cpp",
    "services/src/data_center/form_record/form_record_report.cpp",
    "services/src/feature/bundle_distributed/form_distributed_mgr.cpp",
    "services/src/feature/bundle_forbidden/form_bundle_forbid_mgr.cpp",
    "services/src/feature/bundle_lock/form_bundle_lock_mgr.cpp",
    "services/src/feature/bundle_lock/form_exempt_lock_mgr.cpp",
    "services/src/feature/ecological_rule/form_ecological_rule_service.cpp",
    "services/src/feature/form_share/form_distributed_client.cpp",
    "services/src/feature/form_share/form_free_install_operator.cpp",
    "services/src/feature/form_share/form_share_connection.cpp",
    "services/src/feature/form_share/form_share_mgr.cpp",
    "services/src/feature/form_share/form_share_task_mgr.cpp",
    "services/src/feature/free_install/free_install_status_callback_proxy.cpp",
    "services/src/feature/free_install/free_install_status_callback_stub.cpp",
    "services/src/feature/memory_mgr/form_render_report.cpp",
    "services/src/feature/param_update/param_common_event.cpp",
    "services/src/feature/param_update/param_control.cpp",
    "services/src/feature/param_update/param_manager.cpp",
    "services/src/feature/param_update/param_reader.cpp",
    "services/src/feature/param_update/sign_tools.cpp",
    "services/src/feature/route_proxy/form_router_proxy_mgr.cpp",
    "services/src/feature/theme_form/theme_form_client.cpp",
    "services/src/feature/form_check/form_abnormal_reporter.cpp",
    "services/src/form_host/form_host_callback.cpp",
    "services/src/form_host/form_host_queue.cpp",
    "services/src/form_host/form_host_record.cpp",
    "services/src/form_host/form_host_task_mgr.cpp",
    "services/src/form_mgr/form_ams_adapter.cpp",
    "services/src/form_mgr/form_mgr_adapter.cpp",
    "services/src/form_mgr/form_mgr_queue.cpp",
    "services/src/form_mgr/form_mgr_service.cpp",
    "services/src/form_observer/form_observer_record.cpp",
    "services/src/form_observer/form_observer_task_mgr.cpp",
    "services/src/form_observer/form_resource_observer.cpp",
    "services/src/form_provider/connection/form_acquire_connection.cpp",
    "services/src/form_provider/connection/form_acquire_data_connection.cpp",
    "services/src/form_provider/connection/form_acquire_state_connection.cpp",
    "services/src/form_provider/connection/form_background_connection.cpp",
    "services/src/form_provider/connection/form_batch_delete_connection.cpp",
    "services/src/form_provider/connection/form_cast_temp_connection.cpp",
    "services/src/form_provider/connection/form_configuration_update_connection.cpp",
    "services/src/form_provider/connection/form_delete_connection.cpp",
    "services/src/form_provider/connection/form_location_connection.cpp",
    "services/src/form_provider/connection/form_msg_event_connection.cpp",
    "services/src/form_provider/connection/form_refresh_connection.cpp",
    "services/src/form_provider/connection/form_update_size_connection.cpp",
    "services/src/form_provider/form_provider_mgr.cpp",
    "services/src/form_provider/form_provider_queue.cpp",
    "services/src/form_provider/form_provider_task_mgr.cpp",
    "services/src/form_provider/form_supply_callback.cpp",
    "services/src/form_refresh/check_mgr/active_user_checker.cpp",
    "services/src/form_refresh/check_mgr/add_finish_checker.cpp",
    "services/src/form_refresh/check_mgr/calling_bundle_checker.cpp",
    "services/src/form_refresh/check_mgr/calling_user_checker.cpp",
    "services/src/form_refresh/check_mgr/self_form_checker.cpp",
    "services/src/form_refresh/check_mgr/system_app_checker.cpp",
    "services/src/form_refresh/check_mgr/untrust_app_checker.cpp",
    "services/src/form_refresh/form_refresh_mgr.cpp",
    "services/src/form_refresh/refresh_impl/form_app_upgrade_refresh_impl.cpp",
    "services/src/form_refresh/refresh_impl/form_data_refresh_impl.cpp",
    "services/src/form_refresh/refresh_impl/form_force_refresh_impl.cpp",
    "services/src/form_refresh/refresh_impl/form_host_refresh_impl.cpp",
    "services/src/form_refresh/refresh_impl/form_net_conn_refresh_impl.cpp",
    "services/src/form_refresh/refresh_impl/form_next_time_refresh_impl.cpp",
    "services/src/form_refresh/refresh_impl/form_provider_refresh_impl.cpp",
    "services/src/form_refresh/refresh_impl/form_refresh_after_uncontrol_impl.cpp",
    "services/src/form_refresh/refresh_impl/form_timer_refresh_impl.cpp",
    "services/src/form_refresh/strategy/refresh_cache_mgr.cpp",
    "services/src/form_refresh/strategy/refresh_check_mgr.cpp",
    "services/src/form_refresh/strategy/refresh_control_mgr.cpp",
    "services/src/form_refresh/strategy/refresh_exec_mgr.cpp",
    "services/src/form_render/form_render_connection.cpp",
    "services/src/form_render/form_render_mgr.cpp",
    "services/src/form_render/form_render_mgr_inner.cpp",
    "services/src/form_render/form_render_queue.cpp",
    "services/src/form_render/form_render_task_mgr.cpp",
    "services/src/form_render/form_sandbox_render_mgr_inner.cpp",
    "services/src/status_mgr_center/form_event_queue.cpp",
    "services/src/status_mgr_center/form_event_retry_mgr.cpp",
    "services/src/status_mgr_center/form_event_timeout_queue.cpp",
    "services/src/status_mgr_center/form_status.cpp",
    "services/src/status_mgr_center/form_status_mgr.cpp",
    "services/src/status_mgr_center/form_status_queue.cpp",
    "services/src/status_mgr_center/form_status_table.cpp",
    "services/src/status_mgr_center/form_status_task_mgr.cpp",
  ]

  configs = [
    ":fms_idl_config",
    ":formmgr_config",
    ":formmgr_log_config",
    ":formmgr_sdk_config",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    ":form_config",
    ":form_manager",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:configuration",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_deps_wrapper",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:appkit_native",
    "ability_runtime:mission_info",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "faultloggerd:libbacktrace_local",
    "faultloggerd:libdfx_dumpcatcher",
    "ffrt:libffrt",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbeget_proxy",
    "init:libbegetutil",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "libxml2:libxml2",
    "netmanager_base:net_conn_manager_if",
    "openssl:libcrypto_shared",
    "os_account:os_account_innerkits",
    "relational_store:native_rdb",
    "resource_management:global_resmgr",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "time_service:time_client",
    "window_manager:libwsutils",
  ]

  if (cite_memmgr) {
    external_deps += [ "memmgr:memmgrclient" ]
    cflags_cc += [ "-DMEM_MGR_ENABLE" ]
  }

  if (theme_mgr_enable) {
    cflags_cc += [ "-DTHEME_MGR_ENABLE" ]
  }

  defines = []
  if (form_runtime_power) {
    defines = [ "SUPPORT_POWER" ]
    external_deps += [ "power_manager:powermgr_client" ]
  }

  if (device_usage_statistics) {
    external_deps += [ "device_usage_statistics:usagestatsinner" ]
    defines += [ "DEVICE_USAGE_STATISTICS_ENABLE" ]
  }

  if (form_fwk_watch_api_disable) {
    defines += [ "WATCH_API_DISABLE" ]
  }

  if (res_schedule_service && !form_fwk_watch_api_disable) {
    external_deps += [ "resource_schedule_service:ressched_client" ]
    defines += [ "RES_SCHEDULE_ENABLE" ]
  }

  if (build_variant == "root") {
    defines += [ "FORM_EVENT_FOR_TEST" ]
  }

  subsystem_name = "ability"
  part_name = "form_fwk"
}

################################### fmskit_native ########################################
config("fmskit_config") {
  defines = [ "FMS_LOG_TAG = \"FmskitNative\"" ]
}

config("fmskit_public_config") {
  include_dirs = [
    "interfaces/kits/native/include",
    "interfaces/inner_api/include",
  ]
}

ohos_shared_library("fmskit_native") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [
    ":fmskit_config",
    ":fms_idl_config",
  ]
  public_configs = [ ":fmskit_public_config" ]
  sources = [
    "interfaces/inner_api/src/form_event_hiappevent.cpp",
    "interfaces/kits/native/src/form_caller_mgr.cpp",
    "interfaces/kits/native/src/form_errors.cpp",
    "interfaces/kits/native/src/form_host_caller.cpp",
    "interfaces/kits/native/src/form_host_client.cpp",
    "interfaces/kits/native/src/form_mgr.cpp",
    "interfaces/kits/native/src/form_provider_caller.cpp",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [ ":form_manager" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:extensionkit_native",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  public_external_deps = [
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
  ]

  subsystem_name = "ability"
  innerapi_tags = [ "platformsdk" ]
  part_name = "form_fwk"

  defines = []
  if (form_fwk_watch_api_disable) {
    defines += [ "WATCH_API_DISABLE" ]
  }
  if (hiappevent_global_part_enabled) {
    defines += [ "NO_RUNTIME_EMULATOR" ]

    external_deps += [ "hiappevent:hiappevent_innerapi" ]
  }
}

################################### fmskit_provider_client ########################################
config("fmskit_provider_config") {
  defines = [ "FMS_LOG_TAG = \"FmskitNative\"" ]
}

config("fmskit_provider_public_config") {
  include_dirs = [
    "interfaces/kits/native/include",
    "interfaces/inner_api/include",
  ]
}

ohos_shared_library("fmskit_provider_client") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":fmskit_provider_config" ]
  public_configs = [ ":fmskit_provider_public_config" ]
  sources = [ "interfaces/kits/native/src/form_provider_client.cpp" ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    ":fmskit_native",
    ":form_manager",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:abilitykit_native",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "ability"
  innerapi_tags = [ "platformsdk" ]
  part_name = "form_fwk"
}

################################### form_manager ########################################
config("formmgr_sdk_config") {
  visibility = [ ":*" ]
  include_dirs = [ "interfaces/inner_api/include/" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("form_manager") {
  branch_protector_ret = "pac_ret"

  include_dirs = []
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "interfaces/inner_api/src/form_ashmem.cpp",
    "interfaces/inner_api/src/form_ecological_rule_param.cpp",
    "interfaces/inner_api/src/form_event_report.cpp",
    "interfaces/inner_api/src/form_file_util.cpp",
    "interfaces/inner_api/src/form_host_proxy.cpp",
    "interfaces/inner_api/src/form_host_stub.cpp",
    "interfaces/inner_api/src/form_info_filter.cpp",
    "interfaces/inner_api/src/form_instance.cpp",
    "interfaces/inner_api/src/form_instances_filter.cpp",
    "interfaces/inner_api/src/form_js_info.cpp",
    "interfaces/inner_api/src/form_lock_info.cpp",
    "interfaces/inner_api/src/form_major_info.cpp",
    "interfaces/inner_api/src/form_mgr_proxy.cpp",
    "interfaces/inner_api/src/form_mgr_stub.cpp",
    "interfaces/inner_api/src/form_provider_data.cpp",
    "interfaces/inner_api/src/form_provider_info.cpp",
    "interfaces/inner_api/src/form_provider_proxy.cpp",
    "interfaces/inner_api/src/form_provider_stub.cpp",
    "interfaces/inner_api/src/form_publish_interceptor_proxy.cpp",
    "interfaces/inner_api/src/form_publish_interceptor_stub.cpp",
    "interfaces/inner_api/src/form_render_proxy.cpp",
    "interfaces/inner_api/src/form_render_stub.cpp",
    "interfaces/inner_api/src/form_share_info.cpp",
    "interfaces/inner_api/src/form_status_print.cpp",
    "interfaces/inner_api/src/form_supply_proxy.cpp",
    "interfaces/inner_api/src/form_supply_stub.cpp",
    "interfaces/inner_api/src/form_surface_info.cpp",
    "interfaces/inner_api/src/js_form_state_observer_proxy.cpp",
    "interfaces/inner_api/src/js_form_state_observer_stub.cpp",
    "interfaces/inner_api/src/provider_connect_proxy.cpp",
    "interfaces/inner_api/src/provider_connect_stub.cpp",
    "interfaces/inner_api/src/running_form_info.cpp",
  ]

  configs = [ ":formmgr_log_config" ]

  public_configs = [
    ":formmgr_sdk_config",
    ":formmgr_config",
  ]

  deps = [
    ":form_host_delegate_proxy",
    ":form_host_delegate_stub",
    ":form_provider_delegate_proxy",
    ":form_provider_delegate_stub",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "jsoncpp:jsoncpp",
    "napi:ace_napi",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "ability"
  innerapi_tags = [ "platformsdk" ]
  part_name = "form_fwk"
}

ohos_prebuilt_etc("form_config") {
  source = "services/config/form_config.xml"
  module_install_dir = "etc/form"
  part_name = "form_fwk"
  subsystem_name = "ability"
}

group("form_napi_packages") {
  if (ability_runtime_graphics) {
    deps = [
      "${form_fwk_napi_path}:form_edit_extension",
      "${form_fwk_napi_path}:form_edit_extension_ani",
      "${form_fwk_napi_path}:form_edit_extension_module",
      "${form_fwk_napi_path}:formagent",
      "${form_fwk_napi_path}:formbindingdata",
      "${form_fwk_napi_path}:formbindingdata_napi",
      "${form_fwk_napi_path}:formeditextensionability_napi",
      "${form_fwk_napi_path}:formeditextensioncontext_napi",
      "${form_fwk_napi_path}:formerror_napi",
      "${form_fwk_napi_path}:formextension_napi",
      "${form_fwk_napi_path}:formextensionability",
      "${form_fwk_napi_path}:formextensioncontext_napi",
      "${form_fwk_napi_path}:formhost",
      "${form_fwk_napi_path}:formhost_napi",
      "${form_fwk_napi_path}:forminfo",
      "${form_fwk_napi_path}:forminfo_napi",
      "${form_fwk_napi_path}:formobserver",
      "${form_fwk_napi_path}:formprovider",
      "${form_fwk_napi_path}:formprovider_napi",
      "${form_fwk_napi_path}:formutil_napi",
      "${form_fwk_napi_path}:live_form_extension",
      "${form_fwk_napi_path}:live_form_extension_ani",
      "${form_fwk_napi_path}:live_form_extension_module",
      "${form_fwk_napi_path}:liveformextensionability_napi",
      "${form_fwk_napi_path}:liveformextensioncontext_napi",
    ]
  }
}

group("form_ani_packages") {
  deps = []
  if (ability_runtime_graphics) {
    deps += [
      "${form_fwk_ani_path}/form_agent:form_agent_ani",
      "${form_fwk_ani_path}/form_agent:form_agent_etc",
      "${form_fwk_ani_path}/form_binding_data:formBindingData_ani",
      "${form_fwk_ani_path}/form_binding_data:form_binding_data_etc",
      "${form_fwk_ani_path}/form_edit_extension_ability:form_edit_extension_ability_etc",
      "${form_fwk_ani_path}/form_edit_extension_ability:form_edit_extension_context_etc",
      "${form_fwk_ani_path}/form_error:form_error_etc",
      "${form_fwk_ani_path}/form_host:formHost_ani",
      "${form_fwk_ani_path}/form_host:form_host_etc",
      "${form_fwk_ani_path}/form_info:form_info_etc",
      "${form_fwk_ani_path}/form_observer:form_observer_abc_etc",
      "${form_fwk_ani_path}/form_observer:formobserver_ani",
      "${form_fwk_ani_path}/form_provider:formProvider_ani",
      "${form_fwk_ani_path}/form_provider:form_provider_etc",
      "${form_fwk_ani_path}/form_util:formutil_ani",
      "${form_fwk_ani_path}/live_form_extension_ability:live_form_extension_ability_etc",
      "${form_fwk_ani_path}/live_form_extension_ability:live_form_extension_context_etc",
      "${form_fwk_ani_path}/utils:util_ani",
    ]
  }
}

group("fms_innerkits_target") {
  if (ability_runtime_graphics) {
    deps = [ ":form_manager" ]
  }
}

group("fms_target") {
  deps = [
    ":libfms",
    "services/form_render_service:formrender_service_hap",
  ]
}

group("fms_services_target") {
  if (ability_runtime_graphics) {
    deps = [ ":fms_target" ]
  }
}
