# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_runtime_path = "//foundation/ability/ability_runtime"
ability_runtime_innerapi_path = "${ability_runtime_path}/interfaces/inner_api"
ability_runtime_kits_path = "${ability_runtime_path}/frameworks/kits"
ability_runtime_native_path = "${ability_runtime_path}/frameworks/native"
ability_runtime_services_path = "${ability_runtime_path}/services"
ability_runtime_napi_path = "${ability_runtime_path}/frameworks/js/napi"
bundlefwk_path = "//foundation/bundlemanager/bundle_framework"
bundlefwk_inner_api_path = "${bundlefwk_path}/interfaces/inner_api"
distributeddatamgr_path = "//foundation/distributeddatamgr"
systemabilitymgr_path = "//foundation/systemabilitymgr"
form_fwk_path = "//foundation/ability/form_fwk"
form_fwk_napi_path = "${form_fwk_path}/frameworks/js/napi"
form_fwk_inner_api_path = "${form_fwk_path}/interfaces/inner_api"
form_render_service_path =
    "${form_fwk_path}/services/form_render_service/FormRenderService"
global_path = "//base/global"
ipc_core_path = "//foundation/communication/ipc/interfaces/innerkits/ipc_core"

declare_args() {
  device_usage_statistics = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.resourceschedule_device_usage_statistics)) {
    device_usage_statistics = false
  }
}
