# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_runtime_path = "//foundation/ability/ability_runtime"
ability_runtime_innerapi_path = "${ability_runtime_path}/interfaces/inner_api"
ability_runtime_kits_path = "${ability_runtime_path}/frameworks/kits"
ability_runtime_native_path = "${ability_runtime_path}/frameworks/native"
ability_runtime_services_path = "${ability_runtime_path}/services"
ability_runtime_napi_path = "${ability_runtime_path}/frameworks/js/napi"
form_fwk_ani_path = "//foundation/ability/form_fwk/frameworks/ets/ani"
ability_dmsfwk_path = "//foundation/ability/dmsfwk"

access_token_path = "//base/security/access_token"
bundlefwk_path = "//foundation/bundlemanager/bundle_framework"
bundlefwk_inner_api_path = "${bundlefwk_path}/interfaces/inner_api"
bundle_mgr_path = "//foundation/bundlemanager"
distributeddatamgr_path = "//foundation/distributeddatamgr"
systemabilitymgr_path = "//foundation/systemabilitymgr"
foundation_distributedschedule_path = "//foundation/distributedschedule"
dtbschedmgr_path =
    "${foundation_distributedschedule_path}/dmsfwk/services/dtbschedmgr"
samgr_proxy_path = "${foundation_distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy"
adapter_innerkits_path =
    "${foundation_distributedschedule_path}/samgr/adapter/interfaces/innerkits"

device_manager_path = "//foundation/distributedhardware/device_manager"
form_fwk_path = "//foundation/ability/form_fwk"
form_fwk_napi_path = "${form_fwk_path}/frameworks/js/napi"
form_fwk_inner_api_path = "${form_fwk_path}/interfaces/inner_api"
form_render_service_path =
    "${form_fwk_path}/services/form_render_service/FormRenderService"
global_path = "//base/global"
ipc_core_path = "//foundation/communication/ipc/interfaces/innerkits/ipc_core"
arkui_ace_engine_components_path =
    "//foundation/arkui/ace_engine/frameworks/core/components"
c_utils_base_path = "//commonlibrary/c_utils/base"
form_fuzz_test_path = "form_fwk/form_fwk"
init_path = "//base/startup/init"

declare_args() {
  form_fwk_form_dimension_2_3 = false
  form_fwk_form_dimension_3_3 = false
  form_fwk_watch_api_disable = false
  form_fwk_dynamic_support = false
}

declare_args() {
  device_usage_statistics = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.resourceschedule_device_usage_statistics)) {
    device_usage_statistics = false
  }
}

declare_args() {
  cite_memmgr = false
  if (defined(global_parts_info) &&
      (defined(global_parts_info.resourceschedule_memmgr_override) ||
       defined(global_parts_info.resourceschedule_memmgr))) {
    cite_memmgr = true
  }
}

declare_args() {
  res_schedule_service = false
  if (defined(global_parts_info) &&
      defined(global_parts_info.resourceschedule_resource_schedule_service)) {
    res_schedule_service = true
  }
}

declare_args() {
  theme_mgr_enable = false
  if (defined(global_parts_info) &&
      defined(global_parts_info.theme_theme_mgr)) {
    theme_mgr_enable = true
  }
}

declare_args() {
  form_runtime_power = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.powermgr_power_manager)) {
    form_runtime_power = false
  }
}

declare_args() {
  hiappevent_global_part_enabled = false
  if (defined(global_parts_info) &&
      defined(global_parts_info.hiviewdfx_hiappevent)) {
    hiappevent_global_part_enabled = true
  }
}