# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/es2abc_config.gni")
import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")

config("fmskit_config") {
  defines = [ "FMS_LOG_TAG = \"FmskitNative\"" ]
}

ohos_shared_library("cj_formBindingData_ffi") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [ "form_binding_data/include" ]

  sources = [
    "form_binding_data/src/form_binding_data_common.cpp",
    "form_binding_data/src/form_binding_data_ffi.cpp",
    "form_binding_data/src/form_binding_data_impl.cpp",
  ]

  configs = [ ":fmskit_config" ]

  deps = [
    "${form_fwk_path}:form_manager",
    "${form_fwk_path}:form_render_info",
    "${form_fwk_path}:form_utils",
    "${form_fwk_path}:form_common_info",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:extensionkit_native",
    "ability_runtime:runtime",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  innerapi_tags = [ "platformsdk" ]

  subsystem_name = "ability"
  part_name = "form_fwk"
}

ohos_shared_library("cj_formProvider_ffi") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "form_binding_data/include",
    "form_provider/include",
  ]

  sources = [
    "form_provider/src/cj_form_provider.cpp",
    "form_provider/src/cj_form_util.cpp",
  ]

  configs = [ ":fmskit_config" ]

  deps = [
    ":cj_formBindingData_ffi",
    "${form_fwk_napi_path}:formutil_napi",
    "${form_fwk_path}:fmskit_native",
    "${form_fwk_path}:form_manager",
    "${form_fwk_path}:form_render_info",
    "${form_fwk_path}:form_utils",
    "${form_fwk_path}:form_common_info",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  innerapi_tags = [ "platformsdk" ]

  subsystem_name = "ability"
  part_name = "form_fwk"
}
