# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

#################################################################################

group("form_etc") {
  deps = [
    ":form.para",
    ":form.para.dac",
  ]
}

ohos_prebuilt_etc("form.para") {
  source = "form.para"
  relative_install_dir = "param"
  part_name = "form_fwk"
  subsystem_name = "ability"
}

ohos_prebuilt_etc("form.para.dac") {
  source = "form.para.dac"
  relative_install_dir = "param"
  part_name = "form_fwk"
  subsystem_name = "ability"
}
